<resources>
    <string name="app_name" translatable="false">soho20210308</string>
    <string name="UserID">UserID</string>
    <string name="Password">Password</string>
    <string name="enterBtn">ENTER</string>
    <string name="cleanBtn">CLEAN</string>
    <string name="forgotBtn">Forgot Password ?</string>
    <string name="SalaryQuery">Salary Query</string>
    <string name="punchIn">Punch In</string>
    <string name="punchOut">Punch Out</string>
    <string name="leave">Leave</string>
    <string name="Order">Order</string>
    <string name="Message">Message</string>\
    <string-array name="meals">
        <item>01 Sous vide Thai Chicken </item>
        <item>02 Sous vide Black Pepper Chicken</item>
        <item>03 Sous vide Honey juice Chicken</item>
        <item>04 Sous vide Spiced Chicken with Chili Sauce</item>
        <item>05 MaMa Roast Pork</item>
        <item>06 Thai Roast Pork</item>
        <item>07 Roast Pork with Chili Sauce</item>
        <item>08 Black Pepper Fish</item>
        <item>09 Thai Fish</item>
        <item>10 Curry Fish</item>
        <item>11 Fish with Chili Sauce</item>
        <item>12 Noodles with Chili Sauce</item>
    </string-array>

</resources>